生成管理后台表

--- a/lry_core/src/main/third/code/mybatis.properties
+++ b/lry_core/src/main/third/code/mybatis.properties
@@ -3,7 +3,7 @@ generate.src.dir=.
 generate.config.dir=.
 
 # \u6307\u5b9a\u751f\u6210\u7684\u57fa\u7840\u5305\u540d,\u5c06\u5728\u6b64\u76ee\u5f55\u4e0b\u751f\u6210dao/service/model\u7b49
-generate.src.package=com.lanrenyou.travel
+generate.src.package=com.lanrenyou.admin
 # DAO\u7c7b\u578b: \u6307\u5b9a\u4e3amapper\u65f6,\u751f\u6210Mapper\u63a5\u53e3; \u5176\u5b83\u4efb\u610f\u53c2\u6570\u65f6, \u751f\u6210\u5e38\u89c4DAO,\u4e00\u63a5\u53e3\u4e00\u5b9e\u73b0
 generate.dao.type=
 generate.dao.base=
