web工程可以启动了

--- a/lry_webapp/src/main/resources/configs.properties
+++ b/lry_webapp/src/main/resources/configs.properties
@@ -1,3 +1,3 @@
-domain.www=www.lanrenyoucapital.com.au
+domain.www=www.lanrenyou.com
 #the path of attachments to upload
-upload.path=/Users/leowang/lanrenyou
+upload.path=/Users/webmaster/lanrenyou
