--- a/lry_webapp/src/main/resources/freemarker.properties
+++ b/lry_webapp/src/main/resources/freemarker.properties
@@ -4,7 +4,7 @@ url_escaping_charset=UTF-8
 locale=zh_CN
 #auto_import=common/layout.ftl as layout,
 auto_import=common/spring.ftl as spring
-#auto_include=common/page.ftl
+auto_include=common/page.ftl
 number_format=#
 
 template_update_delay=0
