--- a/lry_core/.classpath
+++ b/lry_core/.classpath
@@ -36,5 +36,6 @@
 	<classpathentry kind="lib" path="src/main/lib/mybatis-spring-1.2.0.jar"/>
 	<classpathentry kind="lib" path="src/main/lib/aopalliance.jar"/>
 	<classpathentry kind="lib" path="src/main/lib/aspectjweaver-1.6.11.jar"/>
+	<classpathentry kind="lib" path="src/main/lib/mail.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
