--- a/lry_webapp/.project
+++ b/lry_webapp/.project
@@ -26,6 +26,11 @@
 			<location>/Users/limf/work/git/lanrenyou/lry_core/src/main/resources</location>
 		</link>
 		<link>
+			<name>core-third</name>
+			<type>2</type>
+			<location>/Users/limf/work/git/lanrenyou/lry_core/src/main/third</location>
+		</link>
+		<link>
 			<name>third</name>
 			<type>2</type>
 			<location>/Users/limf/work/dajie_dev/eclipse_64/eclipse/Eclipse.app/Contents/MacOS/D::/workspace/github/lanrenyou/lry_core/src/main/third</location>
