add ignore encrypt keys properties

--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,7 @@ classes/
 .project
 zhangpj_gitignore.bat
 settings/
+lry_webapp/src/main/resources/encrypt_keys.properties
 lry_webapp/.project
 *.project
 lry_core/.classpath
