support planner search

--- a/lry_search/src/main/webapp/WEB-INF/application.properties
+++ b/lry_search/src/main/webapp/WEB-INF/application.properties
@@ -1,1 +1,2 @@
-campus_server=http\://localhost:8080/cs/,http\://localhost:8080/cs/,http\://localhost:8080/cs/
+lry_travel_server=http\://localhost:8080/search/travel/,http\://localhost:8080/search/travel/,http\://localhost:8080/search/travel/
+lry_planner_server=http\://localhost:8080/search/planner/,http\://localhost:8080/search/planner/,http\://localhost:8080/search/planner/
