--- a/lry_search_query/WebRoot/WEB-INF/web.xml
+++ b/lry_search_query/WebRoot/WEB-INF/web.xml
@@ -36,7 +36,7 @@
 
     <env-entry>
        <env-entry-name>solr/home</env-entry-name>
-       <env-entry-value>D:/dev/apache-tomcat-7.0.11/webapps/cs/WEB-INF/solr</env-entry-value>
+       <env-entry-value>D:/workspace/github/lanrenyou/lry_search_query/WebRoot/WEB-INF/solr</env-entry-value>
        <env-entry-type>java.lang.String</env-entry-type>
     </env-entry>
    
