--- a/lry_search/src/main/resources/log4j.properties
+++ b/lry_search/src/main/resources/log4j.properties
@@ -1,6 +1,6 @@
 # For JBoss: Avoid to setup Log4J outside $JBOSS_HOME/server/default/deploy/log4j.xml!
 # For all other servers: Comment out the Log4J listener in web.xml to activate Log4J.
-global_log_path=/opt/log_home/index_campus/
+global_log_path=D:/logs/
 
 
 log4j.rootCategory=info, stdout,logfile,errorf
