--- a/lry_webapp/src/main/webapp/WEB-INF/web.xml
+++ b/lry_webapp/src/main/webapp/WEB-INF/web.xml
@@ -78,6 +78,22 @@
     	<extension>ico</extension>
     	<mime-type>image/x-icon</mime-type>
 	</mime-mapping>
+	<mime-mapping>
+    	<extension>ttf</extension>
+    	<mime-type>font/ttf</mime-type>
+	</mime-mapping>
+	<mime-mapping>
+    	<extension>otf</extension>
+    	<mime-type>font/opentype</mime-type>
+	</mime-mapping>
+	<mime-mapping>
+    	<extension>woff</extension>
+    	<mime-type>application/font-woff</mime-type>
+	</mime-mapping>
+	<mime-mapping>
+    	<extension>eot</extension>
+    	<mime-type>application/vnd.ms-fontobject</mime-type>
+	</mime-mapping>
 	<!-- <error-page> <error-code>404</error-code> <location>/WEB-INF/ftl/common/404.ftl</location> 
 		</error-page> <error-page> <error-code>500</error-code> <location>/WEB-INF/ftl/common/500.ftl</location> 
 		</error-page> <error-page> <error-code>503</error-code> <location>/WEB-INF/ftl/common/500.ftl</location> 
