solr support two module search

--- a/lry_webapp/src/main/resources/search.properties
+++ b/lry_webapp/src/main/resources/search.properties
@@ -1,2 +1,2 @@
-lry_travel_server=http\://127.0.0.1:8020,http\://127.0.0.1:8020
-lry_planner_server=http\://search.lanrenyou.com,http\://search.lanrenyou.com
+lry_travel_server=http://127.0.0.1:8020/travel/,http://127.0.0.1:8020/travel/
+lry_planner_server=http://127.0.0.1:8020/planner/,http://127.0.0.1:8020/planner/
