--- a/lry_webapp/src/main/resources/lanrenyou_configs.properties
+++ b/lry_webapp/src/main/resources/lanrenyou_configs.properties
@@ -1,3 +1,3 @@
-domain.www=www.lanrenyou.com
+domains.www=www.lanrenyou.com
 search_index_export_record_travel=D:/lry_index/data/exportTravel
 search_index_export_record_planner=D:/lry_index/data/exportPlanner
