--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,33 @@ lry_webapp/bin
 lry_search/bin
 
 lry_webapp/src/main/webapp/resources/js/search.js
+
+lry_upload/src/main/webapp/2014/07/30/114749448.jpg
+
+lry_upload/src/main/webapp/2014/07/30/114749448_d.jpg
+
+lry_upload/src/main/webapp/2014/07/30/114749448_s.jpg
+
+lry_upload/src/main/webapp/2014/07/30/115515274.jpg
+
+lry_upload/src/main/webapp/2014/07/30/115515274_d.jpg
+
+lry_upload/src/main/webapp/2014/07/30/115515274_s.jpg
+
+lry_upload/src/main/webapp/2014/07/30/142118456.jpg
+
+lry_upload/src/main/webapp/2014/07/30/142118456_d.jpg
+
+lry_upload/src/main/webapp/2014/07/30/142118456_s.jpg
+
+lry_upload/src/main/webapp/2014/07/30/142148900.jpg
+
+lry_upload/src/main/webapp/2014/07/30/142148900_d.jpg
+
+lry_upload/src/main/webapp/2014/07/30/142148900_s.jpg
+
+lry_upload/src/main/webapp/2014/07/30/142521338.jpg
+
+lry_upload/src/main/webapp/2014/07/30/142521338_d.jpg
+
+lry_upload/src/main/webapp/2014/07/30/142521338_s.jpg
