--- a/lry_webapp/src/main/resources/lanrenyou_configs.properties
+++ b/lry_webapp/src/main/resources/lanrenyou_configs.properties
@@ -1,3 +1,4 @@
 domains.www=www.lanrenyou.com
+domains.ui=www.lanrenyou.com
 search_index_export_record_travel=/ROOT/search_data/data/exportTravel
 search_index_export_record_planner=/ROOT/search_data/data/exportPlanner
